--- a/index.html
+++ b/index.html
@@ -23,21 +23,21 @@
                     <span>Entradas</span>
                     <img src="/assets/income.svg" alt="Imagem de Entradas">
                 </h3>
-                <p>R$ 5.000,00</p>
+                <p id="incomeDisplay">R$ 5.000,00</p>
             </div>
             <div class="card">
                 <h3>
                     <span>Saídas</span>
                     <img src="/assets/expense.svg" alt="Imagem de Saídas">
                 </h3>
-                <p>R$ 2.000,00</p>
+                <p id="expenseDisplay">R$ 2.000,00</p>
             </div>
             <div class="card total">
                 <h3>
                     <span>Total</span>
                     <img src="/assets/total.svg" alt="Imagem de Total">
                 </h3>
-                <p>R$ 3.000,00</p>
+                <p id="totalDisplay">R$ 3.000,00</p>
             </div>
         </section>
         <section id="transaction">
@@ -56,24 +56,6 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td class="description">Luz</td>
-                        <td class="expense">- R$ 500,00</td>
-                        <td class="date">23/01/2021</td>
-                        <td><img src="/assets/minus.svg" alt="Remover transação" class="minus"></td>
-                    </tr>
-                    <tr>
-                        <td class="description">Criação de Website</td>
-                        <td class="income">R$ 5.000,00</td>
-                        <td class="date">23/01/2021</td>
-                        <td><img src="/assets/minus.svg" alt="Remover transação" class="minus"></td>
-                    </tr>
-                    <tr>
-                        <td class="description">Internet</td>
-                        <td class="expense">- R$ 200,00</td>
-                        <td class="date">23/01/2021</td>
-                        <td><img src="/assets/minus.svg" alt="Remover transação" class="minus"></td>
-                    </tr>
                 </tbody>
             </table>
         </section>
@@ -130,19 +112,6 @@
     <footer>
         <p>dev.finances$</p>
     </footer>
-    <script>
-        const Modal = {
-            open(){
-                document
-                    .querySelector('.modal-overlay')
-                    .classList.add('active')
-            },
-            close(){
-                document
-                    .querySelector('.modal-overlay')
-                    .classList.remove('active')
-            }
-        }
-    </script>
+    <script src="./scripts.js"></script>
 </body>
 </html>
